--- a/task-manager.css
+++ b/task-manager.css
@@ -1,5 +1,280 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
+  @import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&family=Montserrat:ital,wght@0,400;1,300&family=Recursive:wght@600;700&family=Roboto:wght@400;500;700&display=swap');
+
+  * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
+
+  html {
+    font-size: 10px;
+  }
+
+  body {
+    background-color: #B0E0E6;
+
+    font-size: 1.6rem;
+  }
+
+  #taskListContainer {
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+    padding: 1rem 2rem;
+    /* background-color: black; */
+    font-family: "Roboto", 'Segoe UI', sans-serif;
+  }
+
+  header {
+    display: flex;
+    flex-direction: column;
+    align-items: left;
+    justify-content: center;
+    margin-bottom: 2rem;
+  }
+
+  header h1 {
+    font-family: "Lato", 'Segoe UI', sans-serif;
+    font-size: 4rem;
+    font-weight: 900;
+    letter-spacing: 1.8px;
+    background-color: #fff;
+    color: #333;
+    padding: 1rem;
+    position: relative;
+  }
+
+  header h1::after {
+    content: "";
+    height: 4px;
+    width: 110px;
+    position: absolute;
+    top: 53px;
+    left: 1rem;
+    background-color: #1F74D0;
+  }
+
+  #menuContainer {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    column-gap: 1rem;
+    margin: 2rem 0;
+
+  }
+
+  .menubtn {
+    color: #fff;
+    border: none;
+    background-color: none;
+    height: 4rem;
+    font-size: 1.8rem;
+    letter-spacing: 1px;
+    font-weight: 600;
+    cursor: pointer;
+    transition: 200ms;
+  }
+
+  .menubtn:active {
+    box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.3);
+  }
+
+  #addTask {
+    background-color: #33FF5D;
+  }
+
+  #addTask:hover {
+    background-color: #2DCB4B;
+  }
+
+  #editPriority:hover {
+    background-color: #33A1FF;
+  }
+
+  #editPriority {
+    background-color: #1F74D0;
+  }
+
+  #delTask {
+    background-color: #FF5733;
+  }
+
+  #delTask:hover {
+    background-color: #D1401F;
+  }
+
+  .mainContent {
+    width: 100%;
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    column-gap: 1rem;
+    margin-top: 3rem;
+  }
+
+  .inputFieldBox {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+  }
+
+  .inputField {
+    font-family: "Montserrat", sans-serif;
+    letter-spacing: 2px;
+    height: 5rem;
+    background-color: #f2f2f2;
+    border: none;
+    padding-left: 1rem;
+    text-transform: capitalize;
+    outline: none;
+  }
+
+  .inputField::placeholder {
+    font-style: italic;
+    text-transform: lowercase;
+  }
+
+  .inputField:active {
+    border: 2px solid #B0E0E6;
+  }
+
+  /* .taskBox {
+  } */
+
+  table {
+    width: 100%;
+    border-collapse: separate;
+  }
+
+  thead {
+    background-color: #f2f2f2;
+
+  }
+
+  th {
+    padding: 10px;
+    text-align: left;
+    border-bottom: 3px solid #33A1FF;
+  }
+
+  th:first-child {
+    width: 70%;
+  }
+
+  /* Apply styling to the table body  */
+  #tableBody {
+    font-size: 1.8rem;
+    font-weight: 400;
+  }
+
+  #tableBody tr {
+    border-bottom: 1px solid #ddd;
+  }
+
+  #tableBody tr:nth-child(even) {
+    background-color: #f2f2f2;
+  }
+
+  td {
+    padding: 1.5rem;
+    color: #333;
+  }
+
+  td:first-child {
+    font-weight: 400;
+    text-transform: capitalize
+  }
+
+  .responseBox {
+    height: 20rem;
+    width: 45rem;
+    background-color: #f5f5f5;
+    font-family: "Montserrat", sans-serif;
+    font-size: 1.8rem;
+    font-weight: 600;
+    padding: 1rem 2rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    top: 45%;
+    left: 50%;
+    transform: translateX(-50%);
+    transition: all 500ms;
+    animation: fadeIn 500ms ease-in-out;
+  }
+
+  @keyframes fadeIn {
+    0% {
+      opacity: 0;
+    }
+
+    100% {
+      opacity: 1;
+    }
+  }
+
+
+
+  /***********  MEDIA QUARIES / RESPONSIVENESS ************* */
+  @media screen and (max-width: 50em) {
+    header h1 {
+      font-size: 3rem;
+    }
+
+    header h1::after {
+      width: 80px;
+      top: 46px;
+    }
+
+    .mainContent {
+      grid-template-columns: 1fr;
+      row-gap: 3rem;
+    }
+
+  }
+
+  @media screen and (max-width: 34em) {
+    body {
+      font-size: 1.2rem;
+    }
+
+    #taskListContainer {
+      padding: 1rem;
+    }
+
+    header h1 {
+      font-size: 2.2rem;
+    }
+
+    header h1::after {
+      width: 62px;
+      top: 40px;
+    }
+
+    .mainContent {
+      row-gap: 1rem;
+      margin-top: 2rem;
+    }
+
+    #menuContainer {
+      margin: 2rem 0 0;
+    }
+
+    .menubtn {
+      font-size: 1.4rem;
+    }
+
+    th {
+      height: 4rem;
+      padding: 10px 1px;
+    }
+
+    #tableBody {
+      font-size: 1.4rem;
+    }
+
+    .responseBox {
+      font-size: 1.2rem;
+      width: 100%;
+    }
+  }
